--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <title>Graphtools - about us</title>
+    <title>Moisty - About us</title>
     <link rel="stylesheet" href="style_aboutus.css">
 </head>
 
@@ -29,7 +29,7 @@
 
         </header>
         <ul>
-            <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
+            <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Dashboard</a></li>
             <li><a class="active"  href="aboutus.html"><i class="fa fa-fw fa-male"></i> About us</a></li>
         </ul>
     </div>
