--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <title>Graphtools - visualize</title>
+    <title>Moisty - Dashboard</title>
     <link rel="stylesheet" href="style_vis.css">
     <script type="text/javascript" src="papaparse.min.js"></script>
     <script src="https://d3js.org/d3.v4.js"></script>
@@ -40,7 +40,7 @@
 
         </header>
         <ul>
-            <li><a class="active "href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
+            <li><a class="active "href="index.html"><i class="fa fa-fw fa-home"></i> Dashboard</a></li>
             <li><a href="aboutus.html"><i class="fa fa-fw fa-male"></i> About us</a></li>
         </ul>
     </div>
